# pikchr.pl

./: Cargo.toml  Makefile  NOTICE  README.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml
assets/: icon.pxd
crates/pikchr_pl/: Cargo.toml  build.rs  example.pl
crates/pikchr_pl/fonts/: LICENSE.SpaceMono
crates/pikchr_pl/native/prolog/: 000.init.pl  basic.pl  containers.pl  file_as_lines.pl  grid.pl  init.pl  shapes.pl  sized_box.pl  test.pl  testing.pl  txt.pl
crates/pikchr_pl/src/: constants.rs  editor_actions_handler.rs  editor_state.rs  file_watcher.rs  heredoc_parser.rs  keybindings.rs  main.rs  messages.rs  prolog_modules.rs  save_state.rs  string_ext.rs  text_highlighting.rs  undo.rs
crates/pikchr_pl/src/keybindings/: key_ext.rs
crates/pikchr_pro/: Cargo.toml  Makefile  README.md  build.rs
crates/pikchr_pro/native/: .gitignore
crates/pikchr_pro/native/pikchr/: pikchr.c
crates/pikchr_pro/native/prolog/: init.pl
crates/pikchr_pro/native/tpl/: tpl.wasm
crates/pikchr_pro/src/: lib.rs  main.rs  pikchr.rs  prolog.rs  types.rs
crates/pikchr_pro/src/prolog/: asynch.rs  engine.rs  sync.rs
crates/pikchr_pro/src/prolog/engine/: trealla.rs
crates/trealla_wasm/: Cargo.toml  LICENSE  build.rs
crates/trealla_wasm/src/: lib.rs
examples/: commits.pl  events.pl  events2.pl  file.pl  items.pl  wasm_build.pl
