[workspace]
members = [
  "crates/*"
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
iced = { version = "0.14.0", features = ["svg", "highlighter", "tokio", "debug"] }
tokio = { version = "1.49.0", features = ["full"] }
wasmtime = "40.0.2"
wasmtime-wasi = "40.0.2"
cc = "1.0"
thiserror = "2.0.18"
rfd = "0.17.2"
