# This file is part of pikchr.pl.
#
# pikchr.pl is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, version 3 of the License.
#
# pikchr.pl is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along
# with pikchr.pl. If not, see <https://www.gnu.org/licenses/>.

[workspace]
members = [
  "crates/pikchr_pl",
  "crates/pikchr_pro"
]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
iced = { version = "0.14.0", features = ["svg", "highlighter", "tokio", "debug", "image"] }
tokio = { version = "1.49.0", features = ["full"] }
wasmtime = { version = "40.0.2", features = ["all-arch"] }
wasmtime-wasi = "40.0.2"
cc = "1.0"
thiserror = "2.0.18"
rfd = "0.17.2"
image = "0.25.9"
notify = "8.2.0"
