[package]
name = "pikchr_pl"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
iced = { workspace = true }
tokio = { workspace = true }
pikchr_pro = { path = "../pikchr_pro", features = ["async"] }
thiserror = { workspace = true }
rfd = { workspace = true }

[build-dependencies]
cc = { workspace = true }
