[package]
name = "pikchr_pro"
version.workspace = true
edition.workspace = true


[[bin]]
name = "pikchr.pro"
path = "src/main.rs"

[features]
default = ["std", "async"]
std = ["sync"]
sync = []
async = ["dep:tokio"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }


[build-dependencies]
cc = { workspace = true }

