# This file is part of pikchr.pl.
#
# pikchr.pl is free software: you can redistribute it and/or modify it under the
# terms of the GNU General Public License as published by the Free Software
# Foundation, version 3 of the License.
#
# pikchr.pl is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
# A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along
# with pikchr.pl. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "pikchr_pro"
version.workspace = true
edition.workspace = true

[features]
default = ["std", "async"]
std = ["sync"]
sync = []
async = ["dep:tokio"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
trealla-wasm = { path = "../trealla_wasm" }


[build-dependencies]
cc = { workspace = true }
wasmtime = { workspace = true }
